aggregator: Avoid triggering allocation query on identical caps

If the configured output caps end up being identical to the previous ones, don't
send out the caps event, and don't trigger the allocation query.

This avoids potentially long hangs with video aggregator if queues are present
downstream.

Fixes https://gitlab.freedesktop.org/gstreamer/gst-plugins-base/-/issues/802